# energy-wise

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: download_data.py
docs/: ARCHITECTURE.md
src/: __init__.py  constants.py
src/api/: app.py  dtos.py  service.py
src/llm/: energy_agent.py
src/models/: __init__.py  metrics.py  prophet.py  train.py  xgboost.py
src/utils/: __init__.py  data_loader.py  file_ops.py  model_loader.py
