[tool.poetry]
name = "energy-wise"
version = "0.1.0"
description = "End‑to‑end energy‑load forecasting + explainable LLM assistant"
authors = ["neuragicus <163417241+neuragicus@users.noreply.github.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0"
numpy = "^1.24"
prophet = "^1.1"
xgboost = "^2.0"
mlflow = "^2.7"
fastapi = "^0.104"
uvicorn = {version = "^0.24", extras = ["standard"]}
langchain = "^0.1"
langchain-community = "^0.0.10"
langchainhub = "^0.1"
requests = "^2.31"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"

[tool.poetry.group.dev.dependencies]
black = "^23.10"
flake8 = "^6.1"
pre-commit = "^3.5"
isort = "^5.13"
mypy = "^1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "venv"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests"]
